2015-05-20	Daniel Hawkins
	* lib/artifacts: Adjusted several item messages for clarity and grammar.
	* server/c_object.c: Don't show item story (msg) unless it has been
    identified.

2015-05-19	Daniel Hawkins (SilverNexus)
	* test/toolkit/toolkit_crossedit.c: Retired old crossedit test toolkit.
	It was never implemented, and crossedit has been gone for years.

2015-05-16	Daniel Hawkins (SilverNexus)
	* utils/scores.pl.in: Made experience table be dynamically
	read in from the server's installed exp_table file.

2015-05-15	Daniel Hawkins (SilverNexus)
	* random_maps/special.c: Fix fountain material to prevent fountains
	that are actually potions from being destroyed.

2015-03-24	Rick Tanner
	* lib/config/metaserver2: Add entries for additional metaservers, one
	in the US and the other in EU.

2015-03-18	Kevin Zheng
	* server/shop.c: Adjust item enchantment price bonus

2015-02-18	Kevin Zheng
	* server/shop.c: Prevent shops from claiming 'worthless' sold items
	* configure.ac: Ask for a C99 compiler

2015-02-17	Kevin Zheng
	* plugins/: Remove old shop functions from plugin interface

2014-12-21	Kevin Zheng
	* server/shop.c: Overhaul shop prices
	* server/shop.c: Skip shop price adjustment when approximating

2014-12-09	Kevin Zheng
	* server/shop.c: Change the value of unidentified items
	* common/object.c: Fix object_set_msg() to append missing newlines

2014-08-26	SilverNexus
	* lib/formulae: Added formulae incorporating leather from r19607.

2014-06-21	Kevin Zheng
	* utils/crossloop.in: This script now reads its configuration from a
	file. Changes should be made in the new file, not in the script itself.

2014-06-11	SilverNexus
	* lib/checkarch.pl: Rename old checkarch script, since it isn't
	part of the build process and isn't dynamically generated, either.
	* lib/Makefile.am: Remove checkarch script from makefile, since
	no references are made to it.

2014-05-27	SilverNexus
	* lib/formulae: Added smithery formulas to smelt ores into bars.
